# sonoscanner

./: CMakeLists.txt  README.md  conanfile.txt
src/: chart_update.cpp  data.cpp  data.h  dataslice.cpp  dataslice.h  gui.cpp  gui.h  main.cpp  model.h
test/: test.cpp  test_open.cpp
